# IU9-Graphics

./: .gitignore
lab1/: CMakeLists.txt  main.cpp  main.h
lab2/: CMakeLists.txt  main.cpp  main.h
lab3/: CMakeLists.txt  main.cpp  main.hpp
lab4/: CMakeLists.txt  main.cpp  main.hpp
lab6/: CMakeLists.txt  main.cpp
lab8/: CMakeLists.txt  main.cpp
